Proyecto_2/cluster/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grpc
  namespace: so1p2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
spec:
  rules:
  - host: 34.74.46.13.nip.io #IP ingress controller (nginx)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grpc-client
            port:
              number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-python
  namespace: so1p2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  rules:
  - host: 34.74.46.13.nip.io #IP ingress controller (nginx)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-client
            port:
              number: 3000
